<resources>
    <string name="app_name">Voluntariei</string>
    <string name="Profile">Perfil</string>
    <string name="Menu">Menu</string>
    <string name="Notifications">Notificações</string>
    <string name="Help">Ajuda</string>
    <string name="MyData">Meus dados</string>
    <string name="About">Sobre o aplicativo</string>
    <string name="DeleteAccount">Deletar conta</string>
    <string name="Quit">Sair</string>
    <string name="Send">Enviar</string>
    <string name="EnterWithUser">Entrar como usuário</string>
    <string name="EnterWithONG">Entrar como ONG</string>
    <string name="Register">Cadastrar</string>
    <string name="EmailLogin">Login Email</string>
    <string name="MoreOptions">Mais Opções</string>
    <string name="RealizeYourLogin">Realize seu login com uma das seguintes opções</string>
    <string name="Wellcome">Seja bem vindo ao voluntariei, como deseja realizar seu login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginFace">Login com Facebook</string>
    <string name="LoginGoogle">Login com google</string>
    <string name="ConfirmPass">Confirmar Senha</string>
    <string name="Pass">Senha</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ</string>
    <string name="Name">Nome Completo</string>
    <string name="NameOng">Nome Fantasia</string>
    <string name="Email">Email</string>
    <string name="Enter">Entrar</string>
    <string name="field_error">Campo obrigatório</string>
    <string name="Event">Cadastre seu evento</string>
    <string name="hint_event">Nome do evento</string>
    <string name="Description">Descrição</string>
    <string name="about">O <b>Voluntariei</b> é uma plataforma que serve para ONGs anunciarem eventos locais e procurarem por voluntários. \nUtilizando a ferramenta, as ONGs poderão se cadastrar na plataforma para anunciar seus eventos locais. \nA ferramenta também contará com o cadastro pela visão do usuário, podendo procurar eventos locais já cadastrados. Diante do meio que vivemos hoje, baseamos nosso projeto em objetivos de desenvolvimento sustentável da OMS, permitindo que as ONGs cadastrem quais ODSs elas apoiam.</string>
    <string name="Details">Detalhes</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="email_ou_senha_invalido">Email ou senha invalido</string>
    <string name="email_ou_senha_invalid">Email ou senha invalidó</string>
    <string name="confirmar_delete">Deseja realmente deletar sua conta ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmar_saida">Deseja realmente sair de sua conta ?</string>
</resources>