<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/share_tech"
            android:text="@string/Profile"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/MyDataButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/share_tech"
            android:text="@string/MyData"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/HelpButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:paddingStart="10dp"
            android:text="@string/Help"
            android:fontFamily="@font/share_tech"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AboutAppButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/share_tech"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/About"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/DeleteAccountButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/share_tech"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/DeleteAccount"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/QuitButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/Quit"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:fontFamily="@font/share_tech"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>