<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.WelcomeActivity"
    android:background="@color/white_gray"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Welcome"
        app:srcCompat="@drawable/hey_welcome"
        android:layout_margin="22dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Wellcome"
        android:textSize="16sp"
        android:fontFamily="@font/share_tech"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LoginOng"
        android:layout_marginBottom="42dp"
        android:layout_marginHorizontal="53dp"
        android:textAlignment="center"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginOng"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LoginUser"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_blue_button"
        android:text="@string/EnterWithONG"
        android:fontFamily="@font/share_tech"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginUser"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/background_blue_button"
        android:text="@string/EnterWithUser"
        android:fontFamily="@font/share_tech"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>