<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_gray"
        app:layout_constraintCircleRadius="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Realize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/RealizeYourLogin"
            android:fontFamily="@font/share_tech"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="15dp"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Realize"
            android:background="@drawable/background_white_button"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="44dp"
            android:text="@string/LoginGoogle"
            android:textColor="@color/blue_1"
            android:textAllCaps="false"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@id/LoginGoogle"
            app:layout_constraintTop_toTopOf="@id/LoginGoogle"
            app:layout_constraintBottom_toBottomOf="@id/LoginGoogle"
            app:srcCompat="@drawable/google_logo"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@id/LoginFace"
            app:layout_constraintTop_toTopOf="@id/LoginFace"
            app:layout_constraintBottom_toBottomOf="@id/LoginFace"
            app:srcCompat="@drawable/face_logo"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginFace"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LoginGoogle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/LoginFace"
            android:textColor="@color/blue_1"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_white_button"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
